# audioreach-pulseaudio-plugin

./: README.md
modules/pa-pal-plugins/: Makefile.am  configure.ac
modules/pa-pal-plugins/module-pal-card/configs/: default.conf  qcm6490-idp-snd-card.conf  qcm6490-rb3-snd-card.conf  qcs8300-ridesx-snd-card.conf  qcs9100-ridesx-snd-card.conf
modules/pa-pal-plugins/module-pal-card/inc/: bt-a2dp-split.h  hfp.h  pal-card.h  pal-config-parser.h  pal-jack-common.h  pal-jack-format.h  pal-jack.h  pal-loopback.h  pal-sink.h  pal-source.h  pal-utils.h
modules/pa-pal-plugins/module-pal-card/src/: bt-a2dp-split.c  hfp.c  module-pal-card-extn.c  module-pal-card.c  pal-config-parser.c  pal-format-detection.c  pal-jack-external.c  pal-jack-hdmi-out.c  pal-jack.c  pal-loopback.c  pal-sink.c  pal-source.c  pal-utils.c
modules/pa-pal-plugins/module-pal-voiceui-card/: module-pal-voiceui-card.c  pal-voiceui-utils.h
utils/acd/: Makefile.am  configure.ac  pa_pal_acd.cpp  pa_pal_acd.h  pa_pal_acd_test.cpp
utils/pa_bt_audio/: Makefile.am  configure.ac  pa_bt_audio_client_wrapper.c  pa_bt_audio_client_wrapper.h  pa_client_playback.c  pabtaudio.pc.in
utils/pa_pal_voiceui/: Makefile.am  configure.ac  pa_pal_voiceui.cpp  pa_pal_voiceui.h  pa_pal_voiceui_test.cpp
